[package]
name = "sea2d"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
fnv = "1.0.7"
serde_derive = "1.0.218"
serde_json = "1.0.139"

[dependencies.sdl2]
version = "0.37.0"
default-features = false
#features = ["ttf","image","gfx","mixer"]

[dependencies.serde]
version = "1.0.218"
features = ["derive"]
